// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WaterMark test image watermark 1`] = `
<WaterMark
  image="https://img.alicdn.com/tfs/TB1YM3LpipE_u4jSZKbXXbCUVXa-280-128.png"
  rotate={0}
>
  <div
    className="ant-pro-layout-watermark-wrapper"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "height": 500,
        }
      }
    >
      123
    </div>
    <div
      className="ant-pro-layout-watermark"
      style={
        Object {
          "backgroundImage": "url('')",
          "backgroundRepeat": "repeat",
          "backgroundSize": "332px",
          "height": "100%",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 9,
        }
      }
    />
  </div>
</WaterMark>
`;

exports[`WaterMark test text watermark 1`] = `
<WaterMark
  content="Trusple"
>
  <div
    className="ant-pro-layout-watermark-wrapper"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "height": 500,
        }
      }
    />
    <div
      className="ant-pro-layout-watermark"
      style={
        Object {
          "backgroundImage": "url('data:image/png;base64,00')",
          "backgroundRepeat": "repeat",
          "backgroundSize": "332px",
          "height": "100%",
          "left": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": 9,
        }
      }
    />
  </div>
</WaterMark>
`;
